# DEVinHouse-ConectaNuvem

./: README.md
Aulas/treino_em_aula -semana01/estilos/: estilos.css
Aulas/treino_em_aula-semana02/: estilos.css
Modulo_2/Aulas/treino_em_aula-semana10/Aula-01/app/: app.py  pyproject.toml
Modulo_2/Aulas/treino_em_aula-semana10/Aula-01/app/src/app/: __init__.py
Modulo_2/Aulas/treino_em_aula-semana10/Aula-01/app/src/app/controllers/: technologies.py
Modulo_2/Aulas/treino_em_aula-semana10/Aula-01/app/src/app/db/: __init__.py
Modulo_2/Aulas/treino_em_aula-semana10/Aula-01/app/src/app/migrations/versions/: 6996a684998f_.py  856d0fcc316e_.py  8b56241fdf03_.py  e972d0e34b8e_.py
Modulo_2/Aulas/treino_em_aula-semana10/Aula-01/app/src/app/models/: __init__.py  cities.py  country.py  developer.py  developer_technology.py  state.py  technologies.py  user.py
Modulo_2/Exercicios/: Untitled Diagram.drawio
Modulo_3/Aulas/treino_em_aula-semana09/py-mongo-flask/: .env  app.py  pyproject.toml
Modulo_3/Aulas/treino_em_aula-semana09/py-mongo-flask/src/app/: __init__.py
Modulo_3/Aulas/treino_em_aula-semana09/py-mongo-flask/src/app/config/: __init__.py
Modulo_3/Aulas/treino_em_aula-semana09/py-mongo-flask/src/app/controllers/: movie.py
Modulo_3/Aulas/treino_em_aula-semana09/py-mongo-flask/src/app/flasgger/: __init__.py
Modulo_3/Aulas/treino_em_aula-semana09/py-mongo-flask/src/app/models/: cast.py
Modulo_3/Aulas/treino_em_aula-semana09/py-mongo-flask/src/app/routes/: __init__.py
Modulo_3/Aulas/treino_em_aula-semana09/py-mongo-flask/tests/: test_py_mongo_flask.py
(+708 files in other folders)
