[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ViniciusPosssatto <101053966+ViniciusPosssatto@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-SQLAlchemy = "^2.5.1"
Flask = "^2.2.0"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
marshmallow-sqlalchemy = "^0.28.1"
flask-marshmallow = "^0.14.0"
Flask-Migrate = "^3.1.0"
flasgger = "^0.9.5"
requests = "^2.28.1"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
